fix: heading alignment in columns

--- a/hlx_statics/blocks/columns/columns.css
+++ b/hlx_statics/blocks/columns/columns.css
@@ -100,7 +100,6 @@ main div.columns-wrapper div.columns h3.column-header {
     margin-top: 0!important;
     margin-bottom: 16px!important;
     scroll-margin-top:100px;
-    text-align: start;
 }
 
 main div.columns-wrapper div.columns h3.column-header a {
